Make batch publish non-transactional
